*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,8 @@
 Authors of rcssserver3D:
 
-The current code is based on the Diploma Thesis of
-
-Marco Kögler		<koegler@uni-koblenz.de>
- 
-who is the main author of the running initial simulator version. 
-
+Marco Kögler <koegler@uni-koblenz.de>
+Markus Rollmann <rollmark@uni-koblenz.de>
+Oliver Obst <fruit@uni-koblenz.de>
+Tom Howard <tomhoward@users.sf.net>
 
 Also see files ChangeLog and THANKS.
