--- a/THANKS
+++ b/THANKS
@@ -1,13 +1,16 @@
 rcssserver3D THANKS file
 
-rcssserver3D has originally been written by Marco Kögler and by people
-from the RoboCup Soccer Simulator Maintenance Committee (see AUTHORS
-file for details).
-Many :) people further contributed to rcssserver3D by reporting
+rcssserver3D has originally been written by Marco Kögler and by the people
+listed in the AUTHORS file.
+Many people further contributed to rcssserver3D by reporting
 problems, suggesting various improvements or submitting actual
 code. Here is a list of these people. Help us keep it complete and
 exempt of errors.
 
-Alexander Fuchs		<alexf@uni-koblenz.de>
-Marco Koegler		<koegler@uni-koblenz.de>
-Marcus Rollmann 	<rollmark@uni-koblenz.de>
+Christian Bayha <christian.bayha@gmx.de>
+Heni Ben Amor <amor@uni-koblenz.de>
+Alexander Fuchs <alexf@uni-koblenz.de>
+Markus Gründler <mgruendler@gmx.de>
+Patrick Riley <pfr+@cs.cmu.edu>
+Christoph Ringelstein <cringel@uni-koblenz.de>
+Kenny Tilton <ktilton@nyc.rr.com>
