*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,6 @@ Marco Kögler <koegler@uni-koblenz.de>
 Markus Rollmann <rollmark@uni-koblenz.de>
 Oliver Obst <fruit@uni-koblenz.de>
 Tom Howard <tomhoward@users.sf.net>
+Heni Ben Amor <amor@uni-koblenz.de>
 
 Also see files ChangeLog and THANKS.
